fix center alignment problem

--- a/css/styles.less
+++ b/css/styles.less
@@ -67,7 +67,9 @@ code {
 
     width: 1000px;
     height: 550px;
-    margin: 75px 15%;
+    //margin: 75px 15%;
+    margin: 0 auto;
+    margin-top: 5%;
     transition: 0.3s;
 }
 
